--- a/.config
+++ b/.config
@@ -5155,7 +5155,7 @@ CONFIG_PACKAGE_luci-app-firewall=y
 # CONFIG_PACKAGE_luci-app-n2n is not set
 # CONFIG_PACKAGE_luci-app-natmap is not set
 CONFIG_PACKAGE_luci-app-netdata=y
-CONFIG_PACKAGE_luci-app-nextdns=y
+# CONFIG_PACKAGE_luci-app-nextdns is not set
 # CONFIG_PACKAGE_luci-app-nfs is not set
 # CONFIG_PACKAGE_luci-app-nft-qos is not set
 # CONFIG_PACKAGE_luci-app-ngrokc is not set
@@ -5184,41 +5184,27 @@ CONFIG_PACKAGE_luci-app-passwall=y
 #
 # Configuration
 #
+CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
+CONFIG_PACKAGE_luci-app-passwall_Nftables_Transparent_Proxy=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Server=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_tuic_client=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
-# end of Configuration
-
-CONFIG_PACKAGE_luci-app-passwall2=y
-
-#
-# Configuration
-#
-CONFIG_PACKAGE_luci-app-passwall2_Iptables_Transparent_Proxy=y
-CONFIG_PACKAGE_luci-app-passwall2_Nftables_Transparent_Proxy=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Haproxy=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Hysteria=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_NaiveProxy=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Shadowsocks_Libev_Client=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Shadowsocks_Libev_Server=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Shadowsocks_Rust_Client=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Shadowsocks_Rust_Server=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_ShadowsocksR_Libev_Client=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Simple_Obfs=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_SingBox=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_tuic_client=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_V2ray_Plugin=y
 # end of Configuration
 
 # CONFIG_PACKAGE_luci-app-pbr is not set
@@ -5464,40 +5450,6 @@ CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-nextdns-ar is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-bg is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-bn is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-ca is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-cs is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-da is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-de is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-el is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-es is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-fi is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-fr is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-he is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-hi is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-hu is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-it is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-ja is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-ko is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-lt is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-mr is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-ms is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-nl is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-no is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-pl is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-pt is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-pt-br is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-ro is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-ru is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-sk is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-sv is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-tr is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-uk is not set
-# CONFIG_PACKAGE_luci-i18n-nextdns-vi is not set
-CONFIG_PACKAGE_luci-i18n-nextdns-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-nextdns-zh-tw is not set
 # CONFIG_PACKAGE_luci-i18n-opkg-ar is not set
 # CONFIG_PACKAGE_luci-i18n-opkg-bg is not set
 # CONFIG_PACKAGE_luci-i18n-opkg-bn is not set
@@ -5533,7 +5485,6 @@ CONFIG_PACKAGE_luci-i18n-nextdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-opkg-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-passwall2-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-smartdns-ar is not set
 # CONFIG_PACKAGE_luci-i18n-smartdns-bg is not set
 # CONFIG_PACKAGE_luci-i18n-smartdns-bn is not set
@@ -6433,7 +6384,7 @@ CONFIG_PACKAGE_ip-full=y
 # Web Servers/Proxies
 #
 # CONFIG_PACKAGE_apache is not set
-# CONFIG_PACKAGE_brook is not set
+CONFIG_PACKAGE_brook=y
 CONFIG_PACKAGE_cgi-io=y
 # CONFIG_PACKAGE_clamav is not set
 # CONFIG_PACKAGE_cloudflared is not set
@@ -6514,7 +6465,7 @@ CONFIG_SING_BOX_WITH_WIREGUARD=y
 # CONFIG_PACKAGE_squid is not set
 # CONFIG_PACKAGE_srelay is not set
 # CONFIG_PACKAGE_tinyproxy is not set
-# CONFIG_PACKAGE_trojan-go is not set
+CONFIG_PACKAGE_trojan-go=y
 CONFIG_PACKAGE_tuic-client=y
 # CONFIG_PACKAGE_tuic-server is not set
 CONFIG_PACKAGE_uhttpd=y
